# BenchBot-SonyHRCam

./: .gitignore  README.md  export_ply_png.py
GUI/: GUI.py  ImagesSheet.xlsx  SpeciesSheet.xlsx  mm_set_distance.py  readme.md  requirements.txt  sheetupdatePictures.py  sheetupdateSpecies.py
GUI/app/: CameraDevice.h  RemoteCli.cpp
GUI/app/CRSDK/: CrCommandData.h  CrDeviceProperty.h  CrImageDataBlock.h
Hardware Testing/: RPI_ServerSensors_Old.py  Tablet_RPIClientSensors.py
Hardware Testing/Sockets/: utils.py
Hardware and structure/: README.md
Hardware-Testing/: RPI_sensor_testing.py  debugMd.py  debugTx.py  move_bbot.py  sensor_utils.py
Hardware-Testing/Sockets/: client.py  server.py
Hardware-Testing/Sony_SDK/app/: CameraDevice.cpp  MessageDefine.h  RemoteCli.cpp
Hardware-Testing/Sony_SDK/app/CRSDK/: CrError.h
Images/: 1st_file.md
Laptop setup/: readme.md  requirements.txt
Laptop setup/GUI/: GUI.py  ImagesSheet.xlsx  SensorOffsets.csv  SpeciesSheet.xlsx  SpeciesSheet_MD26-Jul-2022.xlsx  cmd_output.txt  debug.py  mm_set_distance.py  new  requirements.txt  sheetupdatePictures.py  sheetupdateSpecies.py
Laptop setup/GUI/app/: CameraDevice.cpp  ConnectionInfo.cpp  ConnectionInfo.h  MessageDefine.cpp  PropertyValueTable.cpp
Laptop setup/GUI/app/CRSDK/: CameraRemote_SDK.h  CrDefines.h  IDeviceCallback.h
Laptop setup/GUI/cmake/: enum_cli_hdr.cmake
Laptop setup/GUI/support/: sheetupdatePictures.py  sheetupdateSpecies.py
Laptop setup/object avoidance/: RPI_ServerSensors.py  RPI_sensor_testing.py  SensorOffsets.csv  Tablet_ForwardControl.py  Tablet_RPIClientSensors.py  Tablet_move_forward.py
SONY_win/: Cr_Core.lib
Software/: desktop.ini  export_ply_png_hardwarereset.py  going_home.py  mm_control.py  running_code.py  set_distance.py
User Files/: .env  readme.md  requirements.txt
User Files/GUI/: CMakeLists.txt
User-Files/: SampleENVFile.txt  environment.yml  environment_rpi.yml  environment_win.yml  readme.md
User-Files/GUI/: GUI.py
User-Files/GUI/app/: PropertyValueTable.h
User-Files/GUI/cmake/: enum_cli_src.cmake
User-Files/GUI/support/: ImagesSheet.xlsx  RPI_Sensors.py  SensorOffsets.csv  SpeciesSheet.xlsx  bbot_utils.py  gohome.py  sheetupdatePictures.py  sheetupdateSpecies.py
User-Files/GUI/support/SONY_linux/: RemoteCli
User-Files/GUI/support/SONY_rpi/: CMakeCache.txt  README.md  RemoteCli
User-Files/Pi_Files/: Diagrams.pptx  readme.md
User-Files/RPi Host/: GUI.py
User-Files/RPi_Host/: GUI.py  README.md  environment.yml
User-Files/RPi_Host/rpi_RemoteCli/: Makefile  cmake_install.cmake
User-Files/RPi_Host/support/: RPI_Sensors.py  SensorOffsets.csv
